# intruduction-to-linux

./: .gitlab-ci.yml  README.md
01/: project_name.py
02/: file-size.txt  gif.txt  wildcards.md
03/: git.txt  local.txt
04/: day_of_week.py  fastest.sh  line_count.sh  row_sum.sh  users.sh
05/: key.pub  rights.md
06/: backup.sh  mod_date.sh  override.sh  should_generate.sh
07/: avg.py  group_sum.py
08/: barplot.sh  dir.sh  ping.sh  remote.txt
10/: factorial.bats  fdisk.txt  netcfg.py  netcfg.sh  normalize.sh  uid.txt  uname.txt
11/: romandate.py
11/project-name/: .swp  requirements.txt  setup.cfg
11/project-name/project_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
11/project-name/src/: script.py
11/project-name/src/project_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
12/: command.txt  python.txt  webserver.txt
13/: server.txt  word.txt
exam/: lab.pub
