[metadata]
name = project-name
version = 0.1.0
author = Jaroslav Kusák
author_email = jarekusak@seznam.cz
description = A Python package for automatically determining project name
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
install_requires =
    GitPython

[options.entry_points]
console_scripts =
    project-name = src.script:main
